--- a/frontend-react/sistema-classificacao-emails/package.json
+++ b/frontend-react/sistema-classificacao-emails/package.json
@@ -10,8 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.12.2",
+    "pdfjs-dist": "^3.11.174",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.63.0",
     "react-icons": "^5.5.0",
     "styled-components": "^6.1.19"
   },
